# Olist-Analytics-Platform

./: .gitignore  README.md  docker-compose.yml
api/: .dockerignore  Dockerfile  README.md  pyproject.toml
api/app/: config.py  database.py  main.py  models.py  pagination.py  scheduler.py  schemas.py
api/scripts/: load_csv_to_db.py
dbt_project/: .dockerignore  Dockerfile  README.md  profiles.yml  pyproject.toml
dbt_project/olist_analytics/: README.md  dbt_project.yml
dbt_project/olist_analytics/models/marts/: _marts__models.yml  dim_customers.sql  dim_date.sql  dim_products.sql  dim_sellers.sql  fct_order_items.sql  fct_orders.sql  fct_payments.sql
dbt_project/olist_analytics/models/staging/: _source.yml  _staging__models.yml  stg_customers.sql  stg_order_items.sql  stg_order_payments.sql  stg_order_reviews.sql  stg_orders.sql  stg_products.sql  stg_sellers.sql
dbt_project/olist_analytics/snapshots/: products_snapshot.sql
dbt_project/olist_analytics/tests/: assert_order_value_matches_payments.sql  assert_products_snapshot_has_current.sql
dlt_pipeline/: Dockerfile  README.md  pyproject.toml  run_pipeline.py
dlt_pipeline/.dlt/: config.toml
dlt_pipeline/sources/: olist_api.py
