[project]
name = "api"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11,<3.14"
dependencies = [
    "apscheduler==3.10.4",
    "fastapi==0.115.0",
    "pandas==2.2.3",
    "psycopg2-binary>=2.9.10",
    "pydantic==2.9.2",
    "pydantic-settings==2.5.2",
    "python-dateutil==2.9.0.post0",
    "sqlalchemy==2.0.35",
    "uvicorn[standard]==0.30.6",
]

[tool.uv.workspace]
members = []
